--- a/index.html
+++ b/index.html
@@ -37,109 +37,109 @@
       <div class="small">
         <a target="_blank" href="#">
           <img
-            src="https://images.pexels.com/photos/1957019/pexels-photo-1957019.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animals.jpg"
             alt="Cinque Terre"
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Butterfly</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/2852438/pexels-photo-2852438.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Forest"
+            src="img/animals3.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Monkey :-)</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/1267239/pexels-photo-1267239.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Northern Lights"
+            src="img/animals2.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Tiger</div>
       </div>
       
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/6624884/pexels-photo-6624884.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Mountains"
+            src="img/animals1.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Bird</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animalm.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Birds</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animalm1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Clouds</div>
       </div>
 
       <div class="large">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1040471/pexels-photo-1040471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animalb.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Troy</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/2026960/pexels-photo-2026960.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animall2.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Dog</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/761977/pexels-photo-761977.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animall1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Cow</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/4577819/pexels-photo-4577819.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/animall.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Cat</div>
       </div>
 
 
@@ -150,109 +150,109 @@
       <div class="small">
         <a target="_blank" href="#">
           <img
-            src="https://images.pexels.com/photos/1957019/pexels-photo-1957019.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foods.jpg"
             alt="Cinque Terre"
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Chilli Potato</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/2852438/pexels-photo-2852438.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foods1.jpg"
             alt="Forest"
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Cake</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/1267239/pexels-photo-1267239.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Northern Lights"
+            src="img/foods2.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Jalebi</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/6624884/pexels-photo-6624884.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Mountains"
+            src="img/foods3.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Kulche</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foodm.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Samose</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foodm1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Tikki</div>
       </div>
 
       <div class="large">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1040471/pexels-photo-1040471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foodb.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Gol Gappe (Home Made)</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/2026960/pexels-photo-2026960.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foodl.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Ice Cream (Home Made)</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/761977/pexels-photo-761977.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foodl1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Dhokla (Home Made)</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/4577819/pexels-photo-4577819.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/foodl2.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Ice Cream</div>
       </div>
 
 
@@ -263,109 +263,109 @@
       <div class="small">
         <a target="_blank" href="#">
           <img
-            src="https://images.pexels.com/photos/1957019/pexels-photo-1957019.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Cinque Terre"
+            src="img/natures.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">River</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/2852438/pexels-photo-2852438.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Forest"
+            src="img/natures1.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Flower</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/1267239/pexels-photo-1267239.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/natures2.jpg"
             alt="Northern Lights"
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Flower</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/6624884/pexels-photo-6624884.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Mountains"
+            src="img/natures3.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Canopy</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/naturem.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Heaven</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/naturem1.jpeg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Ground</div>
       </div>
 
       <div class="large">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1040471/pexels-photo-1040471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/natureb.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Metropolitan</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/2026960/pexels-photo-2026960.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/naturel.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Garden</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/761977/pexels-photo-761977.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/naturel1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Tree</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/4577819/pexels-photo-4577819.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/naturel2.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Flower</div>
       </div>
 
 
@@ -376,109 +376,109 @@
       <div class="small">
         <a target="_blank" href="#">
           <img
-            src="https://images.pexels.com/photos/1957019/pexels-photo-1957019.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Cinque Terre"
+            src="img/abss.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Staircase</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/2852438/pexels-photo-2852438.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Forest"
+            src="img/abss1.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Leaves</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/1267239/pexels-photo-1267239.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-            alt="Northern Lights"
+            src="img/abss2.jpg"
+            alt=""
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Lanterns</div>
       </div>
 
       <div class="small">
         <a target="_blank" href="">
           <img
-            src="https://images.pexels.com/photos/6624884/pexels-photo-6624884.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/abss3.jpg"
             alt="Mountains"
             width="600"
             height="400"
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Diya</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/absm.jpeg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Old Town</div>
       </div>
 
       <div class="med">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1684187/pexels-photo-1684187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/absm1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Sky</div>
       </div>
 
       <div class="large">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/1040471/pexels-photo-1040471.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/absb.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Lights</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/2026960/pexels-photo-2026960.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/absl.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Lamp</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/761977/pexels-photo-761977.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/absl1.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Design</div>
       </div>
 
       <div class="long">
         <a href="" target="_blank">
           <img
-            src="https://images.pexels.com/photos/4577819/pexels-photo-4577819.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            src="img/absl2.jpg"
             alt=""
           />
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">Chandelier</div>
       </div>
     </section>
     <script src="script.js"></script>
